--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     
-    "react-player": "^2.6.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-player": "^2.6.2"
+   
 
     
 
